--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@aws-sdk/client-bedrock-runtime": "^3.730.0",
     "@line/bot-sdk": "^9.5.1",
     "aws-cdk-lib": "2.176.0",
     "constructs": "^10.0.0",
