--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.730.0",
+    "@langchain/aws": "^0.1.3",
+    "@langchain/core": "^0.3.31",
     "@line/bot-sdk": "^9.5.1",
     "aws-cdk-lib": "2.176.0",
     "constructs": "^10.0.0",
