--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
     "@langchain/aws": "^0.1.3",
     "@langchain/core": "^0.3.31",
     "@line/bot-sdk": "^9.5.1",
+    "@slack/oauth": "^3.0.2",
+    "@slack/web-api": "^7.8.0",
     "aws-cdk-lib": "2.176.0",
     "constructs": "^10.0.0",
     "hono": "^4.6.16"
