--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "@aws-sdk/client-bedrock-runtime": "^3.730.0",
     "@langchain/aws": "^0.1.3",
     "@langchain/core": "^0.3.31",
+    "@langchain/openai": "^0.3.17",
     "@line/bot-sdk": "^9.5.1",
     "@slack/types": "^2.14.0",
     "@slack/web-api": "^7.8.0",
