--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.730.0",
+    "@aws-sdk/client-lambda": "^3.734.0",
+    "@discordeno/rest": "^21.0.0",
     "@langchain/aws": "^0.1.3",
     "@langchain/core": "^0.3.31",
     "@langchain/openai": "^0.3.17",
