--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@aws-sdk/client-bedrock-runtime": "^3.730.0",
     "@aws-sdk/client-lambda": "^3.734.0",
     "@discordeno/rest": "^21.0.0",
+    "@hono/node-server": "^1.13.7",
     "@langchain/aws": "^0.1.3",
     "@langchain/core": "^0.3.31",
     "@langchain/openai": "^0.3.17",
