--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,12 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "dev": "node -r ts-node/register --env-file=.env src/index.ts"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
-    "@types/source-map-support": "^0.5.10",
     "aws-cdk": "2.176.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
@@ -22,9 +22,6 @@
   },
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.730.0",
-    "@aws-sdk/client-lambda": "^3.734.0",
-    "@discordeno/rest": "^21.0.0",
-    "@hono/node-server": "^1.13.7",
     "@langchain/aws": "^0.1.3",
     "@langchain/core": "^0.3.31",
     "@langchain/openai": "^0.3.17",
@@ -33,8 +30,6 @@
     "@slack/web-api": "^7.8.0",
     "aws-cdk-lib": "2.176.0",
     "constructs": "^10.0.0",
-    "discord-interactions": "^4.1.0",
-    "hono": "^4.6.16",
-    "source-map-support": "^0.5.21"
+    "discord.js": "^14.17.3"
   }
 }
