--- a/server/package.json
+++ b/server/package.json
@@ -14,29 +14,16 @@
     "start": "tsx src/index.ts",
     "start:local": "tsx --env-file=.env src/index.ts"
   },
-  "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "@types/node": "22.7.9",
-    "aws-cdk": "2.176.0",
-    "cdk-ecr-deployment": "^3.1.8",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.6.3"
-  },
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.730.0",
-    "@langchain/aws": "^0.1.3",
-    "@langchain/core": "^0.3.31",
-    "@langchain/openai": "^0.3.17",
-    "@line/bot-sdk": "^9.5.1",
-    "@slack/types": "^2.14.0",
-    "@slack/web-api": "^7.8.0",
-    "@t3-oss/env-core": "^0.12.0",
+    "aws-cdk": "^2.178.1",
     "aws-cdk-lib": "2.176.0",
     "constructs": "^10.0.0",
     "discord.js": "^14.17.3",
-    "tsx": "^4.19.2",
-    "zod": "^3.24.1"
+    "tsx": "^4.19.2"
+  },
+  "devDependencies": {
+    "@types/node": "22.7.9",
+    "cdk-ecr-deployment": "^3.1.8",
+    "typescript": "~5.6.3"
   }
 }
